@@ -106,7 +106,7 @@ int _dessert_cli_init(void);
  *
  ******************************************************************************/
 
-int _dessert_signals_init(void);
+dessert_result _dessert_signals_init(void);
 
 /******************************************************************************
  *
@@ -133,6 +133,7 @@ int _dessert_cli_log_interval(struct cli_def* cli, char* command, char* argv[], 
 int _dessert_cli_cmd_show_rules(struct cli_def* cli, char* command, char* argv[], int argc);
 int _dessert_cli_cmd_rule_add(struct cli_def* cli, char* command, char* argv[], int argc);
 int _dessert_cli_cmd_rule_rm(struct cli_def* cli, char* command, char* argv[], int argc);
+int _dessert_cli_cmd_rule_default(struct cli_def* cli, char* command, char* argv[], int argc);
 
 /******************************************************************************
  *
