@@ -321,9 +321,9 @@ void _dessert_log(int level, const char* func, const char* file, int line, const
  * @param scheduled time when the callback should have been called
  * @param interval ignored
  *
- * @return 0 (do not unregister)
+ * @return DESSERT_PER_KEEP (do not unregister)
  */
-int dessert_flush_log(void* data, struct timeval* scheduled, struct timeval* interval) {
+dessert_per_result dessert_flush_log(void* data, struct timeval* scheduled, struct timeval* interval) {
     if(dessert_logfd != NULL) {
         pthread_mutex_lock(&_dessert_logfile_mutex);
         fflush(dessert_logfd);
@@ -344,7 +344,7 @@ int dessert_flush_log(void* data, struct timeval* scheduled, struct timeval* int
 
 #endif
     dessert_debug("*** flushed log ***");
-    return 0;
+    return DESSERT_PER_KEEP;
 }
 
 /**
