@@ -2,6 +2,8 @@
     - Fixed bugs in packet filter
     - Removed legacy defines that are replaced by enums
     - Replaced int return values by enum types
+    - Added enum for periodics return codes
+    - The filter is now called always before the mesh callbacks are invoked
 
 20110712 - 1.04
     - Added CLI show function for monitor configuration
